--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,25 @@
 .App {
   text-align: center;
-  background-color: rgb(146, 125, 98);
+  background-color: #814e1b;
+ 
 }
 
 
-.App-header {
-  font-family: 'Arial', sans-serif;
-  font-size: 29px;
-  font-weight: 700;
-  text-align: center;
-  color: white;
-  background: linear-gradient(to right, #e2b94a, #8b7945); /* Blue gradient */
-  padding: 20px 0;
-  border-radius: 5px 5px 0 0; /* Rounded top corners */
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+.header {
+  background-color: #6845129c; /* Sienna */
+  padding: 1rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center the logo horizontally */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid #a85a23bd; /* SaddleBrown */
+}
+
+.logo {
+  height: 50px;
+  width: 300px;
+  max-width: 290px;
+  object-fit: contain;
 }
 
 img{
@@ -22,20 +28,30 @@ img{
   object-fit: cover;
  }
 
-nav{
-  background-color: rgb(146, 125, 98);
-padding: 7px;
-text-align: right;
+ nav {
+  background-color :#d8b18a; /* SaddleBrown */
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-bottom: 3px solid #c06422a4; /* Sienna */
 }
 
-.link{
+.link {
+  color: #FFF5E1; /* Light beige for contrast */
   text-decoration: none;
-  color:white; 
-  font-size: 25px;
-  font-weight: 1000;
-  padding: 15px;
-  text-align: right;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  background-color: #a0512d9f;
+  transition: background-color 0.3s, color 0.3s;
+}
 
+.link:hover {
+  background-color: #A0522D; /* Sienna */
+  color: #ffffff;
 }
 
 .carousel-image {
@@ -45,21 +61,8 @@ text-align: right;
 }
 
 .card {
-  background-color:burlywood ;
+  background-color:#F5DEB3 ;
 }
 
 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.bd{
-  display: inline-flex;
-  background-color: aqua;
-
-}
